# rnet-poc

./: .gitattributes  .gitignore  .gitmodules  .prettierrc  CONTRIBUTING.md  LICENSE  MyLib.podspec  README.md  TODO.md  package.json  tsconfig.json
.github/ISSUE_TEMPLATE/: config.yml
.github/workflows/: ci.yml
android/: CMakeLists.txt  build.gradle  build.gradle.kts  cpp-adapter.cpp
android/src/main/: AndroidManifest.xml
android/src/main/java/com/mylib/: MyLibModule.java  MyLibModule.kt  MyLibPackage.java  MyLibPackage.kt
android/src/newarch/com/mylib/: MyLibSpec.java  MyLibSpec.kt
android/src/oldarch/: MyLibSpec.java  MyLibSpec.kt
cpp/: Model.hpp  MyLib.cpp  MyLib.h  Tensor.hpp  Types.hpp  Utils.hpp
cpp/core/: Model.cpp  Model.h  Tensor.cpp  Tensor.h  Types.cpp  Types.h  Utils.cpp  dtype.cpp  install.cpp  install.h  model.cpp  model.h  tensor.cpp  utils.cpp  utils.h
example/: app.json  package.json
example/src/: App.tsx  CameraScreen.tsx  GalleryScreen.tsx  HookScreen.tsx  InspectScreen.tsx  LLMScreen.tsx  ManualScreen.tsx  ModelPicker.tsx  SemanticSegmentationScreen.tsx  imagenetClasses.ts  pngjs.d.ts
ios/: MyLib.mm
patches/: react-native-worklets+0.9.1.patch
skills/: README.md  add_native_extension.md  add_task_pipeline.md  model_schema_validation.md  verify_and_build.md
src/: Model.ts  NativeMyLib.ts  Tensor.ts  bridge.ts  constants.ts  index.ts  index.tsx  models.ts  types.ts  utils.ts
src/constants/: classification.ts  index.ts  segmentation.ts
src/core/: Model.ts  Tensor.ts  model.ts  modelSchema.ts  runtime.ts  signature.ts  (+1 more)
(+65 files in other folders)
